# wikijs-api-wrapper

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: example.settings.json  page_create.py  page_delete.py  page_render.py  page_single.py  page_update.py  pages_list.py
tests/: page_create.py  pages_list.py
wikijspy/: __init__.py  api_client.py  configuration.py  test.py
wikijspy/api/: assets.py  authentication.py  pages.py  shared.py  users.py
wikijspy/types/: assets_types.py  authentication_types.py  error.py  general.py  page_types.py  users_types.py
